# VulkanPlayground

./: .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt  Entrypoints.h  VulkanDebug.cpp  VulkanDebug.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  benchmark.hpp  keycodes.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
cmake/: FindDirectFB.cmake  FindWayland.cmake
examples/: CMakeLists.txt
examples/test/: test.cpp
examples/trianglevulkan13/: trianglevulkan13.cpp
scripts/: embed_spv.cmake
shaders/: mesh.slang  satellite.slang  shared.slang  solver.slang  triangle.slang
shaders/glsl/computenbody/: particle.frag.spv  particle.vert.spv  particle_calculate.comp.spv  particle_integrate.comp.spv
shaders/glsl/triangle/: triangle.vert.spv
src/: CMakeLists.txt  ComputePipeline.cpp  ComputePipeline.hpp  Computer.cpp  Computer.hpp  DebugOutput.hpp  Frames.hpp  GlfwContext.cpp  GlfwContext.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Mesh.cpp  Mesh.hpp  PushConstants.hpp  Renderer.cpp  Renderer.hpp  Satellite.cpp  Satellite.hpp  Uniforms.hpp  Vertex.hpp  VulkanApplication.cpp  VulkanApplication.hpp  VulkanApplicationOld.cpp  VulkanCommand.cpp  VulkanCommand.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanLoader.cpp  VulkanLoader.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRender.cpp  VulkanRender.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanSync.cpp  VulkanSync.hpp  VulkanWindow.cpp  (+3 more)
src/core/: Application.cpp  Application.hpp  ConsoleLogger.hpp  FileLogger.hpp  Logger.hpp  Settings.hpp
